# Public-Portfolio-Projects

./: .gitmodules  README.md
C# Projects/2D side scroll/Assets/Animations/: Player Animator.controller  RobotBoyIdle00.controller  RobotBoyIdle01.controller  (+7 more)
C# Projects/2D side scroll/ProjectSettings/: ProjectSettings.asset  TagManager.asset
C# Projects/Painter/: Painter.sln
C# Projects/Painter/WindowsFormsQuickStart/: PaintSurface.Designer.cs  PaintSurface.cs  PaintSurface.resx  Painter.csproj  Program.cs
C++ Projects/Infinite Runner/: BirdTestSuite.h  CMakeLists.txt  GameWorld.cpp  GameWorld.h  GameWorldTestSuite.h  LevelTestSuite.h  Makefile  ObstacleTestSuite.h  README.md  SpikeTestSuite.h  World.cpp  World.h  bird.cpp  bird.h  level.cpp  level.h  main.cpp  obstacle.h  spike.cpp  spike.h
C++ Projects/My Ray Tracer/: .gitignore  CMakeLists.txt  Ray.h  Shape.h  Sphere.h  Tracer.cpp  Tracer.h  Triangle.h  Vec3.h  config  main.cpp  testscene.ppm
Java Projects/: Automata.java
Java Projects/Fish Game/: Design.txt  Fish.java  UserGuide.txt
Java Projects/Forbidden Island/: Cells.java  ExamplesForbiddenIsland.java  ForbiddenIslandWorld.java  IList.java
Java Projects/Music Editor/: midi-transcript.txt  readme.txt
Racket Projects/: Tetris.rkt
Racket Projects/Matrix Manipulation Work/: Matrices-2-tests.rkt  Matrices-2.rkt  Matrices.rkt  Spin-To-Win-2.rkt  Spin-To-Win-No-HTDP.rkt  Spin-To-Win.rkt
Racket Projects/Microsoft Code Competition/: compress.rkt  website.rkt
Racket Projects/Spin To Win/: Matrices-tests.rkt  Spin-To-Win-htdp.rkt  Spin-To-Win.rkt
(+62 files in other folders)
